[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akshareios"
version = "0.1.0"
description = "AKShare 轻量 iOS 版 —— 纯 Python 实现，无 pandas/numpy/lxml 依赖"
readme = "README.md"
authors = [
    {name = "yushuyi"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = ["stock", "finance", "A-share", "ios", "lightweight", "akshare"]
dependencies = [
    "requests>=2.22.0",
]

[project.urls]
Homepage = "https://github.com/yushuyi/akshareios"
Repository = "https://github.com/yushuyi/akshareios"

[tool.setuptools.packages.find]
where = ["."]
include = ["akshareios*"]
